# python-urlpattern

./: Cargo.toml  LICENSE.txt  README.md  gitignore.txt  pyproject.toml  urlpattern.pyi
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_lib.py  urlpatterntestdata.json
