[package]
name = "python-urlpattern"
version = "0.1.5"
authors = ["방성범 (Bang Seongbeom) <bangseongbeom@gmail.com>"]
edition = "2024"
description = "An implementation of the URL Pattern Standard for Python written in Rust."
repository = "https://github.com/urlpattern/python-urlpattern"
license = "MIT"
keywords = ["urlpattern"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
deno_urlpattern = { package = "urlpattern", version = "0.4.1" }
