[package]
name = "urlpattern"
version = "0.3.0"
authors = ["방성범 (Bang Seongbeom) <bangseongbeom@gmail.com>"]
edition = "2024"
description = "An implementation of the URL Pattern Standard for Python written in Rust."
repository = "https://github.com/urlpattern/python-urlpattern"
license = "MIT"
keywords = ["urlpattern"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
deno-urlpattern = { version = "0.6.0", package = "urlpattern" }
pyo3 = "0.28.2"
regex = "1.12.3"
url = "2.5.8"
